# ndk_gif

app/: build.gradle
app/src/androidTest/java/com/ice/ndkgif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dgif_lib.c  native-lib.cpp
app/src/main/java/com/ice/ndkgif/: GifNDKDecoder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ice/ndkgif/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
